Creado el formulario con el campo "Correo"

--- a/Actividad6.html
+++ b/Actividad6.html
@@ -2,5 +2,10 @@
   <head>
     <title>Validacion de formularios con JS</title>
   </head>
-  <body></body>
+  <body>
+    <form name="Formulario1" action="" method="get">
+      <!--Correo-->
+      <input type="text" name="Correo" id="eMail" value="@" /><br />
+    </form>
+  </body>
 </html>
