Creado el campo "Contrasena"

--- a/Actividad6.html
+++ b/Actividad6.html
@@ -5,7 +5,9 @@
   <body>
     <form name="Formulario1" action="" method="get">
       <!--Correo-->
-      <input type="text" name="Correo" id="eMail" value="@" /><br />
+      <input type="email" name="Correo" id="eMail"/><br />
+      <!--Contrasenia-->
+      <input type="password" name="contrasena" id="passws" placeholder="Escribe tu contrasenia">
     </form>
   </body>
 </html>
