Agregado un campo de opcion multiple llamado "Rol"

--- a/Actividad6.html
+++ b/Actividad6.html
@@ -5,9 +5,16 @@
   <body>
     <form name="Formulario1" action="" method="get">
       <!--Correo-->
-      <input type="email" name="Correo" id="eMail"/><br />
+      <input type="email" name="Correo" id="eMail"/><br>
       <!--Contrasenia-->
-      <input type="password" name="contrasena" id="passws" placeholder="Escribe tu contrasenia">
+      <input type="password" name="contrasena" id="passws" placeholder="Escribe tu contrasenia"><br>
+      <!--Rol (Opcion multiple)-->
+      <select name="Rol" id="rol">
+        <!--Opciones-->
+        <option value="0">Selecciona</option>
+        <option value="1">Gerente</option>
+        <option value="2">Ejecutivo</option>
+      </select>
     </form>
   </body>
 </html>
