--- a/Actividad6.html
+++ b/Actividad6.html
@@ -14,7 +14,9 @@
         <option value="0">Selecciona</option>
         <option value="1">Gerente</option>
         <option value="2">Ejecutivo</option>
-      </select>
+      </select><br>
+      <!--Llamada de funcion-->
+      <input type="submit" onclick="Validar()">
     </form>
   </body>
 </html>
