--- a/Actividad6.html
+++ b/Actividad6.html
@@ -1,13 +1,34 @@
 <html>
   <head>
     <title>Validacion de formularios con JS</title>
+    <!--Script de JS-->
+    <script>
+      console.log("Hola")
+      function Validar(){
+        //Obtener los valores de los campos del formulario
+        var mail=document.getElementById('eMail').value;
+        var pass=document.getElementById('passwd').value;
+        var rol=document.getElementById('rol').value;
+        //Mostrar en consola los valores
+        console.log(mail);
+        console.log(pass);
+        console.log(rol);
+        //Validando los campos
+        if(mail!='' && pass!='' && rol!=0){
+          alert("Campos llenados correctamente");
+        }
+        else{
+          alert("Faltan campos por llenar");
+        }
+      }
+    </script>
   </head>
   <body>
-    <form name="Formulario1" action="" method="get">
+    <form name="Formulario1" method="post">
       <!--Correo-->
       <input type="email" name="Correo" id="eMail"/><br>
       <!--Contrasenia-->
-      <input type="password" name="contrasena" id="passws" placeholder="Escribe tu contrasenia"><br>
+      <input type="password" name="contrasena" id="passwd" placeholder="Escribe tu contrasenia"><br>
       <!--Rol (Opcion multiple)-->
       <select name="Rol" id="rol">
         <!--Opciones-->
@@ -16,7 +37,7 @@
         <option value="2">Ejecutivo</option>
       </select><br>
       <!--Llamada de funcion-->
-      <input type="submit" onclick="Validar()">
+      <input type="submit" onclick="Validar(); return false">
     </form>
   </body>
 </html>
